akynoc/tests/snapshots/integration__collections@lexer.snap
---
source: akynoc/tests/integration.rs
expression: tokens
snapshot_kind: text
---
[
  Struct,
  Identifier("list"),
  LBrace,
  Identifier("e"),
  Colon,
  And,
  Void,
  Semi,
  Identifier("next"),
  Colon,
  And,
  Struct,
  Identifier("list"),
  Semi,
  RBrace,
  Identifier("memcpy"),
  LPar,
  Identifier("source"),
  Colon,
  And,
  Void,
  Comma,
  Identifier("destination"),
  Colon,
  And,
  Void,
  Comma,
  Identifier("bytes"),
  Colon,
  Int,
  RPar,
  Colon,
  Void,
  LBrace,
  Let,
  Identifier("src"),
  Define,
  LPar,
  And,
  Char,
  RPar,
  Identifier("source"),
  Semi,
  Let,
  Identifier("dst"),
  Define,
  LPar,
  And,
  Char,
  RPar,
  Identifier("destination"),
  Semi,
  For,
  LPar,
  Identifier("i"),
  Colon,
  LBrack,
  IntLiteral("0"),
  Semi,
  Identifier("bytes"),
  RBrack,
  RPar,
  LBrace,
  Identifier("dst"),
  LBrack,
  Identifier("i"),
  RBrack,
  Assign,
  Identifier("src"),
  LBrack,
  Identifier("i"),
  RBrack,
  Semi,
  RBrace,
  RBrace,
  Identifier("main"),
  LPar,
  RPar,
  Colon,
  Void,
  LBrace,
  RBrace,
]
