akynoc/tests/snapshots/integration__factorial@lexer.snap
---
source: akynoc/tests/integration.rs
expression: tokens
snapshot_kind: text
---
[
  Identifier("fact_rec"),
  LPar,
  Identifier("n"),
  Colon,
  Int,
  RPar,
  Colon,
  Int,
  LBrace,
  If,
  LPar,
  Identifier("n"),
  Le,
  IntLiteral("1"),
  RPar,
  LBrace,
  IntLiteral("1"),
  RBrace,
  Else,
  LBrace,
  Identifier("n"),
  Asterisk,
  Identifier("fact_rec"),
  LPar,
  Identifier("n"),
  Minus,
  IntLiteral("1"),
  RPar,
  RBrace,
  RBrace,
  Identifier("fact_iter"),
  LPar,
  Identifier("n"),
  Colon,
  Int,
  RPar,
  Colon,
  Int,
  LBrace,
  Let,
  Identifier("x"),
  Define,
  IntLiteral("1"),
  Semi,
  For,
  LPar,
  Identifier("i"),
  Colon,
  LBrack,
  IntLiteral("1"),
  Semi,
  Identifier("n"),
  RBrack,
  RPar,
  LBrace,
  Identifier("x"),
  Assign,
  Identifier("x"),
  Asterisk,
  Identifier("i"),
  Semi,
  RBrace,
  Identifier("x"),
  RBrace,
  Identifier("main"),
  LPar,
  RPar,
  Colon,
  Void,
  LBrace,
  Let,
  Identifier("x"),
  Define,
  IntLiteral("3"),
  Semi,
  Let,
  Identifier("f1"),
  Define,
  Identifier("fact_rec"),
  LPar,
  Identifier("x"),
  RPar,
  Semi,
  Let,
  Identifier("f2"),
  Define,
  Identifier("fact_iter"),
  LPar,
  Identifier("x"),
  RPar,
  Semi,
  RBrace,
]
