akynoc/tests/snapshots/integration__simple_arithmetic@lexer.snap
---
source: akynoc/tests/integration.rs
expression: tokens
snapshot_kind: text
---
[
  Identifier("add"),
  LPar,
  Identifier("x"),
  Colon,
  Int,
  Comma,
  Identifier("y"),
  Colon,
  Int,
  RPar,
  Colon,
  Int,
  LBrace,
  Identifier("x"),
  Plus,
  Identifier("y"),
  RBrace,
  Identifier("main"),
  LPar,
  RPar,
  Colon,
  Void,
  LBrace,
  Let,
  Identifier("x"),
  Define,
  IntLiteral("1"),
  Semi,
  Let,
  Identifier("y"),
  Define,
  IntLiteral("2"),
  Semi,
  Identifier("add"),
  LPar,
  Identifier("x"),
  Comma,
  Identifier("y"),
  RPar,
  Semi,
  RBrace,
]
