akynoc/tests/snapshots/integration__simple_arithmetic@parser.snap
---
source: akynoc/tests/integration.rs
expression: ast
snapshot_kind: text
---
[
  Item(
    id: "[nodeid]",
    kind: FnDefn(FnDefn(
      sig: FnSig(
        name: Ident(
          name: "add",
        ),
        params: [
          Param(
            name: Ident(
              name: "x",
            ),
            ty: Ty(
              id: "[nodeid]",
              kind: Primitive(Int),
            ),
          ),
          Param(
            name: Ident(
              name: "y",
            ),
            ty: Ty(
              id: "[nodeid]",
              kind: Primitive(Int),
            ),
          ),
        ],
        ty: Ty(
          id: "[nodeid]",
          kind: Primitive(Int),
        ),
      ),
      decl: None,
      block: Stmt(
        id: "[nodeid]",
        kind: Block(Block(
          stmts: [
            Stmt(
              id: "[nodeid]",
              kind: Expr(Expr(
                id: "[nodeid]",
                kind: BinOp(Expr(
                  id: "[nodeid]",
                  kind: Ident(Ident(
                    name: "x",
                  )),
                  ty: Ty(
                    id: "[nodeid]",
                    kind: Infer,
                  ),
                ), Add, Expr(
                  id: "[nodeid]",
                  kind: Ident(Ident(
                    name: "y",
                  )),
                  ty: Ty(
                    id: "[nodeid]",
                    kind: Infer,
                  ),
                )),
                ty: Ty(
                  id: "[nodeid]",
                  kind: Infer,
                ),
              )),
            ),
          ],
        )),
      ),
    )),
  ),
  Item(
    id: "[nodeid]",
    kind: FnDefn(FnDefn(
      sig: FnSig(
        name: Ident(
          name: "main",
        ),
        params: [],
        ty: Ty(
          id: "[nodeid]",
          kind: Void,
        ),
      ),
      decl: None,
      block: Stmt(
        id: "[nodeid]",
        kind: Block(Block(
          stmts: [
            Stmt(
              id: "[nodeid]",
              kind: Local(Local(
                name: Ident(
                  name: "x",
                ),
                ty: Ty(
                  id: "[nodeid]",
                  kind: Infer,
                ),
                value: Some(Expr(
                  id: "[nodeid]",
                  kind: Literal(Literal(
                    value: Int(1),
                  )),
                  ty: Ty(
                    id: "[nodeid]",
                    kind: Infer,
                  ),
                )),
              )),
            ),
            Stmt(
              id: "[nodeid]",
              kind: Local(Local(
                name: Ident(
                  name: "y",
                ),
                ty: Ty(
                  id: "[nodeid]",
                  kind: Infer,
                ),
                value: Some(Expr(
                  id: "[nodeid]",
                  kind: Literal(Literal(
                    value: Int(2),
                  )),
                  ty: Ty(
                    id: "[nodeid]",
                    kind: Infer,
                  ),
                )),
              )),
            ),
            Stmt(
              id: "[nodeid]",
              kind: Expr(Expr(
                id: "[nodeid]",
                kind: CallFn(CallFn(
                  name: Expr(
                    id: "[nodeid]",
                    kind: Ident(Ident(
                      name: "add",
                    )),
                    ty: Ty(
                      id: "[nodeid]",
                      kind: Infer,
                    ),
                  ),
                  args: [
                    Expr(
                      id: "[nodeid]",
                      kind: Ident(Ident(
                        name: "x",
                      )),
                      ty: Ty(
                        id: "[nodeid]",
                        kind: Infer,
                      ),
                    ),
                    Expr(
                      id: "[nodeid]",
                      kind: Ident(Ident(
                        name: "y",
                      )),
                      ty: Ty(
                        id: "[nodeid]",
                        kind: Infer,
                      ),
                    ),
                  ],
                )),
                ty: Ty(
                  id: "[nodeid]",
                  kind: Infer,
                ),
              )),
            ),
          ],
        )),
      ),
    )),
  ),
]
